socket.io on client side integrated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Messaging app</title>
+    <title>Simple messaging app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="style.css" rel="stylesheet">
@@ -13,4 +13,7 @@
 <p>Hello, world!</p>
 </body>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="socket.io/socket.io.js"></script>
+<script src="client.js"></script>
 </html>
