--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,10 @@
 </div>
 
 <div id="divChat" class="container-fluid">
+    <p id="usernameMessage"></p>
     <div id="divMessages"></div>
-    <input class="form-control" id="textMessage">
+    <input class="form-control" id="inputRecipient" placeholder="Recipient">
+    <input class="form-control" id="inputMessage" placeholder="Message...(write /users to get the list of connected users)">
 </div>
 </body>
 
