basic implementation done; readme updated

--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,14 @@ body {
     margin: auto;
 }
 
+#divChat {
+    display: none;
+}
+
+#usedUsername {
+    display: none;
+}
+
 #inputUsername {
     position: relative;
     box-sizing: border-box;
